--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.v63.20260217.js"></script>
-<link href="/assets/css/fortune.v63.20260217.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
+<link href="/assets/css/fortune.v62.20260217.css" rel="stylesheet"/>
 <meta content="https://88st.cloud/img/logo.png" property="og:image"/>
 <script type="application/ld+json">
 {
@@ -99,13 +99,6 @@
 }
 </script>
 
-
-<style>
-/* index fortune reorder v63 */
-.section-wrap{display:flex;flex-direction:column;}
-#whySection{order:30;}
-#fortuneSection{order:40;}
-</style>
 </head>
 <body>
 <h1 style="position:absolute;left:-9999px;">스포츠 배당 분석기와 배당 마진 계산기 | 88</h1>
@@ -185,7 +178,7 @@
     <a class="insight-btn btn-mini" href="/fortune/">전체 보기 <span aria-hidden="true">→</span></a>
   </div>
 
-  <div class="fortune-widget compact" data-role="fortuneWidget">
+  <div class="fortune-widget" data-role="fortuneWidget">
     <div class="fortune-left">
       <div aria-label="오늘의 운 점수" class="fortune-ring" role="img">
         <div class="fortune-ring-inner">
@@ -194,20 +187,41 @@
         </div>
       </div>
 
-      <div class="fortune-pick fortune-profile compact">
-        <label class="fortune-label" for="fortuneDob">간단 운세 확인</label>
-        <div class="fortune-profile-grid compact">
+      <div class="fortune-pick fortune-profile">
+        <label class="fortune-label" for="fortuneDob">생년월일</label>
+        <div class="fortune-profile-row">
           <input class="fortune-input" id="fortuneDob" type="date" inputmode="numeric" placeholder="YYYY-MM-DD"/>
-          <select class="fortune-input" id="fortuneLevel" aria-label="브리핑 레벨">
-            <option value="beginner">초급</option>
-            <option value="pro">프로</option>
-            <option value="risk">하이리스크 경고</option>
-          </select>
           <button class="fortune-btn fortune-query" id="fortuneQuery" type="button">조회</button>
         </div>
-        <div class="fortune-profile-hint fortune-muted">입력 후 조회 → 오늘 브리핑 요약(상세는 ‘전체 보기’)</div>
+        <div class="fortune-profile-hint fortune-muted">입력하면 별자리/띠가 자동 적용됩니다.</div>
       </div>
 
+      <div class="fortune-pick">
+        <label class="fortune-label" for="fortuneSign">별자리</label>
+        <select class="insight-select" id="fortuneSign">
+          <option value="aries">양자리</option>
+          <option value="taurus">황소자리</option>
+          <option value="gemini">쌍둥이자리</option>
+          <option value="cancer">게자리</option>
+          <option value="leo">사자자리</option>
+          <option value="virgo">처녀자리</option>
+          <option value="libra">천칭자리</option>
+          <option value="scorpio">전갈자리</option>
+          <option value="sagittarius">사수자리</option>
+          <option value="capricorn">염소자리</option>
+          <option value="aquarius">물병자리</option>
+          <option value="pisces">물고기자리</option>
+        </select>
+      </div>
+
+      <div class="fortune-pick">
+        <label class="fortune-label" for="fortuneLevel">브리핑 레벨</label>
+        <select class="insight-select" id="fortuneLevel">
+          <option value="beginner">초급</option>
+          <option value="pro">프로</option>
+          <option value="risk">하이리스크 경고</option>
+        </select>
+      </div>
     </div>
 
     <div class="fortune-right">
@@ -303,7 +317,7 @@
 </div>
 </div>
 </div>
-<script defer="" src="/assets/js/fortune.v63.20260217.js"></script>
+<script defer="" src="/assets/js/fortune.v62.20260217.js"></script>
 <script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
