--- a/tool-virtual/index.html
+++ b/tool-virtual/index.html
@@ -34,7 +34,7 @@
   <script defer src="/assets/js/j.71bbe4a35d81.js"></script>
   <script defer src="/assets/js/j.d2cf652ff950.js"></script>
   <script defer src="/assets/js/j.efba3509e62c.js"></script>
-  <script defer src="/assets/js/j.8829a3ccde44.v63.20260217.js"></script>
+  <script defer src="/assets/js/j.8829a3ccde44.js"></script>
 
   <link href="/assets/css/x.11d0a10f603d.css" rel="stylesheet"/>
   <link href="/assets/c.d0474bb4988d.css" rel="stylesheet"/>
@@ -250,7 +250,6 @@
   .cmpCard{grid-column: span 12;}
 }
 </style>
-  <link href="/assets/c.guide.v63.20260217.css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -262,23 +261,6 @@
         <span class="small">※ <b>내 확률 입력은 제거</b>했습니다. 이 페이지는 <b>마진/공정배당 기반의 구조 분석</b>에 집중합니다.</span>
       </p>
     </div>
-
-    <details class="st-guide">
-      <summary>
-        <span>사용 가이드</span>
-        <span class="meta">마진·공정배당·TOP3</span>
-      </summary>
-      <div class="st-guide-body">
-        <h4>빠른 시작</h4>
-        <ul>
-          <li><b>종목/마켓</b> 선택 → 배당(2-way/3-way)을 입력하면 <b>마진</b>과 <b>공정배당</b>이 즉시 계산됩니다.</li>
-          <li>여러 경기/마켓을 한 번에 비교하려면 <b>빠른 붙여넣기</b>에 여러 줄로 붙여넣고, <b>마진 스캐너 TOP3</b>에서 골라 적용하세요.</li>
-          <li>결과는 “승패 예측”이 아니라, <b>오버라운드(수수료 구조)</b>를 확인해 덜 불리한 선택을 찾는 용도입니다.</li>
-        </ul>
-        <div class="muted">※ 배당/마켓마다 구조가 달라집니다. 표본이 적을 때는 과해석 금지.</div>
-      </div>
-    </details>
-
 
     <div class="grid">
       <div class="card">
