--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-<link href="/assets/css/fortune.v62.20260217.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/j.8829a3ccde44.v63.20260217.js"></script>
+<link href="/assets/css/fortune.v64.20260217.css" rel="stylesheet"/>
 <meta content="https://88st.cloud/img/logo.png" property="og:image"/>
 <script type="application/ld+json">
 {
@@ -98,7 +98,21 @@
   ]
 }
 </script>
+<style>
+/* index fortune reorder v63 */
+.section-wrap{display:flex;flex-direction:column;}
+#whySection{order:30;}
+#fortuneSection{order:40;}
 
+/* why section collapse luxe */
+.why-intro{margin-top:10px;color:rgba(0,0,0,.62);font-size:13px;line-height:1.45}
+.why-details{margin-top:10px}
+.why-details>summary{list-style:none;cursor:pointer;user-select:none;display:inline-flex;align-items:center;gap:8px;
+  padding:10px 12px;border-radius:14px;background:rgba(255,255,255,.66);
+  border:1px solid rgba(0,0,0,.08);box-shadow:0 14px 34px rgba(0,0,0,.10)}
+.why-details>summary::-webkit-details-marker{display:none}
+.why-details[open]>summary{margin-bottom:12px}
+</style>
 </head>
 <body>
 <h1 style="position:absolute;left:-9999px;">스포츠 배당 분석기와 배당 마진 계산기 | 88</h1>
@@ -171,91 +185,52 @@
 </a>
 </div>
 </div>
-
 <div class="section" id="fortuneSection">
-  <div class="section-header">
-    <div class="title"><span class="badge">LUCK</span>오늘의 운 브리핑</div>
-    <a class="insight-btn btn-mini" href="/fortune/">전체 보기 <span aria-hidden="true">→</span></a>
-  </div>
-
-  <div class="fortune-widget" data-role="fortuneWidget">
-    <div class="fortune-left">
-      <div aria-label="오늘의 운 점수" class="fortune-ring" role="img">
-        <div class="fortune-ring-inner">
-          <div class="fortune-score" id="fortuneScore">—</div>
-          <div class="fortune-date" id="fortuneDate">—</div>
-        </div>
-      </div>
-
-      <div class="fortune-pick fortune-profile">
-        <label class="fortune-label" for="fortuneDob">생년월일</label>
-        <div class="fortune-profile-row">
-          <input class="fortune-input" id="fortuneDob" type="date" inputmode="numeric" placeholder="YYYY-MM-DD"/>
-          <button class="fortune-btn fortune-query" id="fortuneQuery" type="button">조회</button>
-        </div>
-        <div class="fortune-profile-hint fortune-muted">입력하면 별자리/띠가 자동 적용됩니다.</div>
-      </div>
-
-      <div class="fortune-pick">
-        <label class="fortune-label" for="fortuneSign">별자리</label>
-        <select class="insight-select" id="fortuneSign">
-          <option value="aries">양자리</option>
-          <option value="taurus">황소자리</option>
-          <option value="gemini">쌍둥이자리</option>
-          <option value="cancer">게자리</option>
-          <option value="leo">사자자리</option>
-          <option value="virgo">처녀자리</option>
-          <option value="libra">천칭자리</option>
-          <option value="scorpio">전갈자리</option>
-          <option value="sagittarius">사수자리</option>
-          <option value="capricorn">염소자리</option>
-          <option value="aquarius">물병자리</option>
-          <option value="pisces">물고기자리</option>
-        </select>
-      </div>
-
-      <div class="fortune-pick">
-        <label class="fortune-label" for="fortuneLevel">브리핑 레벨</label>
-        <select class="insight-select" id="fortuneLevel">
-          <option value="beginner">초급</option>
-          <option value="pro">프로</option>
-          <option value="risk">하이리스크 경고</option>
-        </select>
-      </div>
-    </div>
-
-    <div class="fortune-right">
-      <div class="fortune-head" id="fortuneHead">—</div>
-      <div class="fortune-lines">
-        <div class="fortune-line"><span>행운 키워드</span><b id="fortuneKeyword">—</b></div>
-        <div class="fortune-line"><span>행운 컬러</span><b id="fortuneColor">—</b></div>
-        <div class="fortune-line"><span>행운 숫자</span><b id="fortuneNumber">—</b></div>
-        <div class="fortune-line"><span>미션</span><b id="fortuneMission">—</b></div>
-      </div>
-
-      <div class="fortune-ban">
-        <span class="k">오늘의 금지 행동</span>
-        <b class="v" id="fortuneBan">—</b>
-      </div>
-
-      <div class="fortune-actions">
-        <button class="insight-btn" id="fortuneSpeak" type="button">운세 듣기</button>
-        <button class="fortune-btn" id="fortuneSilly" type="button">쓸데없는 운세</button>
-        <button class="fortune-btn" id="fortuneCopy" type="button">요약 복사</button>
-      </div>
-
-      <div class="fortune-silly" hidden id="fortuneSillyBox">
-        <div class="fortune-silly-title">쓸데없지만 은근 쓸모있는 한 줄</div>
-        <div class="fortune-silly-text" id="fortuneSillyText">—</div>
-      </div>
-      <div class="fortune-note">※ 엔터테인먼트용 브리핑입니다. 예측이 아니라 <b>컨디션·리듬·충동 억제</b>를 위한 참고로만 사용하세요.</div>
-    </div>
-  </div>
+<div class="section-header">
+<div class="title"><span class="badge">LUCK</span>오늘의 운 브리핑</div>
+<a class="insight-btn btn-mini" href="/fortune/">전체 보기 <span aria-hidden="true">→</span></a>
 </div>
-
+<div class="fortune-widget compact" data-role="fortuneWidget">
+<div class="fortune-left">
+<div aria-label="오늘의 운 점수" class="fortune-ring" role="img">
+<div class="fortune-ring-inner">
+<div class="fortune-score" id="fortuneScore">—</div>
+<div class="fortune-date" id="fortuneDate">—</div>
+</div>
+</div>
+<div class="fortune-pick fortune-profile compact">
+<label class="fortune-label" for="fortuneDob">간단 운세 확인</label>
+<div class="fortune-profile-grid compact">
+<input class="fortune-input" id="fortuneDob" inputmode="numeric" placeholder="YYYY-MM-DD" type="date"/>
+<select aria-label="브리핑 레벨" class="fortune-input" id="fortuneLevel">
+<option value="beginner">초급</option>
+<option value="pro">프로</option>
+<option value="risk">하이리스크 경고</option>
+</select>
+<button class="fortune-btn fortune-query" id="fortuneQuery" type="button">조회</button>
+</div>
+<div class="fortune-profile-hint fortune-muted">입력 후 조회 → 오늘 브리핑 요약(상세는 ‘전체 보기’)</div>
+</div>
+</div>
+<div class="fortune-right">
+<div class="fortune-briefline" id="fortuneBriefLine">점수 — · 주의 — · 추천 —</div>
+<div class="fortune-mini-actions">
+<button class="insight-btn btn-mini" id="fortuneSpeak" type="button">운세 듣기</button>
+<button class="insight-btn btn-mini" id="fortuneCopy" type="button">요약 복사</button>
+<button class="insight-btn btn-mini cs-shoe-soft" id="fortuneSilly" type="button">쓸데없음</button>
+<a class="insight-btn btn-mini" href="/fortune/">자세히 <span aria-hidden="true">→</span></a>
+</div>
+<div class="fortune-silly" hidden="" id="fortuneSillyBox">
+<div class="fortune-silly-title">쓸데없지만 은근 쓸모있는 한 줄</div>
+<div class="fortune-silly-text" id="fortuneSillyText">—</div>
+</div>
+<div class="fortune-note small">※ 엔터테인먼트용 브리핑입니다. 예측이 아니라 <b>컨디션·리듬·충동 억제</b>를 위한 참고로만 사용하세요.</div>
+</div></div>
+</div>
+</div>
 <div class="section" id="whySection">
 <div class="title"><span class="badge">WHY</span>왜 88 분석기를 써야 하나요?</div>
-<div aria-label="WHY 섹션(스포츠/카지노)" class="why-split">
+<div class="why-intro">핵심만 먼저 보고, 필요할 때만 상세를 펼쳐 확인하세요.</div><details class="why-details" id="whyDetails"><summary>도구별 상세 보기</summary><div aria-label="WHY 섹션(스포츠/카지노)" class="why-split">
 <div aria-label="스포츠 배당 분석기" class="why-card">
 <div class="why-kicker">스포츠 배당 분석기</div>
 <div class="why-head"><b>3초 안에 결론</b>이 나오는 구조로 설계했습니다.</div>
@@ -313,11 +288,11 @@
 <div class="why-note">이 도구는 ‘예측’이 아니라 <b>세션/자금관리</b>를 위한 참고용 분석기입니다.</div>
 <div class="why-cta"><a class="insight-btn primary" data-cta="open_tool_slot" href="/tool-slot/">슬롯 환수율(RTP) 분석기 열기 <span aria-hidden="true">→</span></a></div>
 </div>
+</div></details>
 </div>
-</div>
-</div>
-</div>
-<script defer="" src="/assets/js/fortune.v62.20260217.js"></script>
+
+
+<script defer="" src="/assets/js/fortune.v64.20260217.js"></script>
 <script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
