--- a/bonus-checklist/index.html
+++ b/bonus-checklist/index.html
@@ -37,7 +37,7 @@
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.v63.20260217.js"></script>
+<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
 <link href="https://88st.cloud/bonus-checklist/" rel="canonical"/><meta content="https://88st.cloud/bonus-checklist/" property="og:url"/><meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="wrap">
