--- a/tool/kelly/index.html
+++ b/tool/kelly/index.html
@@ -23,7 +23,7 @@
 <script defer="" src="/assets/js/j.d2cf652ff950.js"></script>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.v63.20260217.js"></script>
+<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
 <meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="wrap">
@@ -86,12 +86,7 @@
       </div>
 </div>
 </div>
-<script data-src="../../assets/config/toolconfig/c.4f53f5a25f.json" id="__88stToolConfig" type="application/json"></script>
-<div aria-label="인증 업체 빠른보기" class="vendor-teaser" data-vt-fixed="1,2,3,4" data-vt-pick="2" data-vt-pool="10,11,8,7" id="vendorTeaser">
-<div class="vt-head">
-<div>
-<div class="vt-title">인증 업체 빠른보기</div>
-<div class="vt-sub">고정 4 + 오늘의 추천 2(페이지별 자동 로테이션) · 카드 클릭 → 상세 혜택/공지 · 가입코드 미입력 시 혜택 불가</div>
+<script data-src="../../assets/config/toolconfig/c.4f53f5a25f.json" id="__88stToolConfig" type="application/json"></script><div class="vt-sub">고정 4 + 오늘의 추천 2(페이지별 자동 로테이션) · 카드 클릭 → 상세 혜택/공지 · 가입코드 미입력 시 혜택 불가</div>
 </div>
 <div class="badge">보증·인증</div>
 </div>
