--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -19,10 +19,10 @@
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.43df7d0713c1.css" rel="stylesheet"/>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<link href="/assets/c.casino.evo.v64.20260217.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.v63.20260217.js"></script>
+<link href="/assets/c.casino.evo.v65.20260217.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
 <script defer="" src="/assets/js/j.c471c3193855.js"></script>
-<script defer="" src="/assets/js/j.casino.evo.v64.20260217.js"></script>
+<script defer="" src="/assets/js/j.casino.evo.v65.20260217.js"></script>
 <script src="../assets/js/inline-bundles/b.cba5ff41a7.js"></script>
 <script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <script type="application/ld+json">
@@ -35,8 +35,7 @@
     ]
   }
   </script>
-<meta content="/img/logo.png" property="og:image"/>  <link href="/assets/c.guide.v63.20260217.css" rel="stylesheet"/>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body class="st-app">
 <main class="cs-wrap">
 <section class="cs-hero">
@@ -218,14 +217,130 @@
     </div>
   </section>
 
-  <div class="cs-evo-grid">
-    <section class="cs-card" aria-label="바카라 하우스엣지">
-      <h2>바카라: 기대값 · 하우스엣지</h2>
-      <div class="cs-row" style="margin-top:10px;">
-        <div class="cs-field" style="min-width:200px;">
-          <label for="evoBacBet">베팅금(원)</label>
-          <input id="evoBacBet" inputmode="numeric" value="10000"/>
-        </div>
+
+
+  <section class="cs-card" style="margin-top:12px;" aria-label="슈 트래커">
+    <h2>슈 트래커 (최근 결과 기록)</h2>
+    <div class="cs-adv small" style="border-top:none; padding-top:8px;">
+      <div>• 최근 결과를 기록해 <b>편차/연속/분산</b>을 숫자로 확인하는 용도입니다. “다음 결과를 맞추는 예측”이 아닙니다.</div>
+      <div>• 바카라는 독립 시행이므로, 다음 핸드에 대한 확정 예측은 불가능합니다. (여기서는 이론 확률 + 관측치만 제공합니다)</div>
+    </div>
+
+    <div class="cs-shoe-toolbar" style="margin-top:10px;">
+      <div class="cs-shoe-providers" role="tablist" aria-label="운영사 선택">
+        <button class="cs-shoe-pill on" type="button" data-provider="evo">Evolution</button>
+        <button class="cs-shoe-pill" type="button" data-provider="prag">Pragmatic</button>
+      </div>
+      <div class="cs-shoe-actions">
+        <button class="insight-btn btn-mini" type="button" data-add="P">PLAYER</button>
+        <button class="insight-btn btn-mini" type="button" data-add="B">BANKER</button>
+        <button class="insight-btn btn-mini" type="button" data-add="T">TIE</button>
+        <button class="insight-btn btn-mini cs-shoe-soft" type="button" data-act="undo">되돌리기</button>
+        <button class="insight-btn btn-mini cs-shoe-soft" type="button" data-act="clear">초기화</button>
+      </div>
+    </div>
+
+    <div class="cs-evo-out" id="evoShoeOut" style="margin-top:10px;"></div>
+  </section>
+
+
+
+
+  <section class="cs-card cs-evo-switch" aria-label="EV/리스크 계산기">
+  <div class="cs-evo-switch-row" role="tablist" aria-label="계산기 선택">
+    <button class="cs-top-tab cs-evo-tab on" type="button" data-show="bac">바카라: 기대값·하우스엣지</button>
+    <button class="cs-top-tab cs-evo-tab" type="button" data-show="rou">룰렛: 기대손실(이론)</button>
+    <button class="cs-top-tab cs-evo-tab" type="button" data-show="risk">세션 리스크</button>
+  </div>
+  <div class="cs-evo-panels">
+    <section class="cs-card cs-evo-panel on" data-panel="bac" aria-label="바카라 하우스엣지">
+          <h2>바카라: 기대값 · 하우스엣지</h2>
+          <div class="cs-row" style="margin-top:10px;">
+            <div class="cs-field" style="min-width:200px;">
+              <label for="evoBacBet">베팅금(원)</label>
+              <input id="evoBacBet" inputmode="numeric" value="10000"/>
+            </div>
+            <div class="cs-field" style="min-width:180px;">
+              <label for="evoBacHands">핸드 수</label>
+              <input id="evoBacHands" inputmode="numeric" value="100"/>
+            </div>
+            <div class="cs-field" style="min-width:180px;">
+              <label for="evoBacType">베팅</label>
+              <select id="evoBacType">
+                <option value="banker">BANKER</option>
+                <option value="player">PLAYER</option>
+                <option value="tie">TIE</option>
+              </select>
+            </div>
+          </div>
+          <div class="cs-row" style="margin-top:10px;">
+            <div class="cs-field" style="min-width:200px;">
+              <label for="evoBacCommission">BANKER 커미션(%)</label>
+              <input id="evoBacCommission" inputmode="decimal" value="5"/>
+            </div>
+            <div class="cs-field" style="min-width:200px;">
+              <label for="evoBacTiePay">TIE 배당 (예: 8 = 8:1)</label>
+              <input id="evoBacTiePay" inputmode="decimal" value="8"/>
+            </div>
+          </div>
+          <div class="cs-evo-out" id="evoBacOut" style="margin-top:10px;"></div>
+          <div class="cs-adv small">
+            <div>• 8덱 기준(대표값): Banker 45.86% / Player 44.62% / Tie 9.52% (Tie는 Push 처리)</div>
+          </div>
+        </section>
+    <section class="cs-card cs-evo-panel" data-panel="rou" aria-label="룰렛 하우스엣지">
+          <h2>룰렛: 기대 손실(이론)</h2>
+          <div class="cs-row" style="margin-top:10px;">
+            <div class="cs-field" style="min-width:220px;">
+              <label for="evoRouWheel">휠 타입</label>
+              <select id="evoRouWheel">
+                <option value="eu">유럽(0) · 37칸</option>
+                <option value="us">미국(0,00) · 38칸</option>
+              </select>
+            </div>
+            <div class="cs-field" style="min-width:200px;">
+              <label for="evoRouBet">베팅금(원)</label>
+              <input id="evoRouBet" inputmode="numeric" value="10000"/>
+            </div>
+            <div class="cs-field" style="min-width:180px;">
+              <label for="evoRouSpins">스핀 수</label>
+              <input id="evoRouSpins" inputmode="numeric" value="100"/>
+            </div>
+          </div>
+          <div class="cs-evo-out" id="evoRouOut" style="margin-top:10px;"></div>
+          <div class="cs-adv small">
+            <div>• 룰렛은 베팅 종류(인사이드/아웃사이드)와 무관하게, 같은 휠이면 이론 하우스엣지가 동일합니다.</div>
+          </div>
+        </section>
+    <section class="cs-card cs-evo-panel" data-panel="risk" aria-label="세션 리스크">
+          <h2>세션 리스크: 목표/손절 도달 확률</h2>
+          <div class="cs-row" style="margin-top:10px;">
+            <div class="cs-field" style="min-width:200px;">
+              <label for="evoUnit">베팅 단위(원)</label>
+              <input id="evoUnit" inputmode="numeric" value="10000"/>
+            </div>
+            <div class="cs-field" style="min-width:200px;">
+              <label for="evoPwin">승률 p (0~1)</label>
+              <input id="evoPwin" inputmode="decimal" value="0.50"/>
+            </div>
+          </div>
+          <div class="cs-row" style="margin-top:10px;">
+            <div class="cs-field" style="min-width:200px;">
+              <label for="evoTargetU">목표(유닛)</label>
+              <input id="evoTargetU" inputmode="numeric" value="5"/>
+            </div>
+            <div class="cs-field" style="min-width:200px;">
+              <label for="evoStopU">손절(유닛)</label>
+              <input id="evoStopU" inputmode="numeric" value="5"/>
+            </div>
+          </div>
+          <div class="cs-evo-out" id="evoRiskOut" style="margin-top:10px;"></div>
+          <div class="cs-adv small">
+            <div>• 단순화된 “1유닛 랜덤워크” 모델입니다. 실제 게임은 변동성/커미션/베팅 분산에 따라 달라질 수 있습니다.</div>
+          </div>
+        </section>
+  </div>
+</section>
         <div class="cs-field" style="min-width:180px;">
           <label for="evoBacHands">핸드 수</label>
           <input id="evoBacHands" inputmode="numeric" value="100"/>
@@ -308,52 +423,6 @@
       </div>
     </section>
   </div>
-
-
-  <section class="cs-card" id="evoShoeSection" style="margin-top:12px;" aria-label="슈 트래커">
-    <h2>슈 트래커 (최근 결과 기록)</h2>
-    <div class="cs-adv small" style="border-top:none; padding-top:8px;">
-      <div>• 최근 결과를 기록해 <b>편차/연속/분산</b>을 숫자로 확인하는 용도입니다. “다음 결과를 맞추는 예측”이 아닙니다.</div>
-      <div>• 바카라는 독립 시행이므로, 다음 핸드에 대한 확정 예측은 불가능합니다. (여기서는 이론 확률 + 관측치만 제공합니다)</div>
-    </div>
-
-    <div class="cs-shoe-toolbar" style="margin-top:10px;">
-      <div class="cs-shoe-providers" role="tablist" aria-label="운영사 선택">
-        <button class="cs-shoe-pill on" type="button" data-provider="evo">Evolution</button>
-        <button class="cs-shoe-pill" type="button" data-provider="prag">Pragmatic</button>
-      </div>
-      <div class="cs-shoe-actions">
-        <button class="insight-btn btn-mini" type="button" data-add="P">PLAYER</button>
-        <button class="insight-btn btn-mini" type="button" data-add="B">BANKER</button>
-        <button class="insight-btn btn-mini" type="button" data-add="T">TIE</button>
-        <button class="insight-btn btn-mini cs-shoe-soft" type="button" data-act="undo">되돌리기</button>
-        <button class="insight-btn btn-mini cs-shoe-soft" type="button" data-act="clear">초기화</button>
-      </div>
-    <div class="cs-shoe-paste" style="margin-top:10px;">
-      <div class="cs-row" style="align-items:stretch;">
-        <div class="cs-field" style="flex:1; min-width:260px;">
-          <label for="evoShoePaste">최근 결과 붙여넣기</label>
-          <textarea id="evoShoePaste" placeholder="예: B P P T B ... (공백/쉼표/줄바꿈 구분)"></textarea>
-        </div>
-        <div class="cs-field" style="min-width:220px;">
-          <label>도구</label>
-          <div class="cs-btnrow" style="margin-top:0;">
-            <button class="insight-btn btn-mini" type="button" id="evoShoeApplyPaste">붙여넣기 적용</button>
-            <button class="insight-btn btn-mini cs-shoe-soft" type="button" id="evoShoeCopySeq">기록 복사</button>
-          </div>
-          <div class="cs-adv small" style="border-top:none; padding-top:8px;">
-            <div>표기: <b>P</b>=PLAYER / <b>B</b>=BANKER / <b>T</b>=TIE</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    </div>
-
-    <div class="cs-shoe-badges" id="evoShoeBadges" aria-label="패턴 알림"></div>
-    <div class="cs-evo-out" id="evoShoeOut" style="margin-top:10px;"></div>
-  </section>
-
   <section class="cs-card" style="margin-top:12px;">
     <h2>안내</h2>
     <div class="cs-adv small" style="border-top:none; padding-top:8px;">
