--- a/analysis/index.html
+++ b/analysis/index.html
@@ -30,7 +30,7 @@
   ]
 }
 </script>
-<script src="/assets/js/j.9179477b9417.js"></script>
+<script defer src="/assets/js/j.9179477b9417.js"></script>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
@@ -428,7 +428,7 @@
 <div class="pro-scanlist" id="scanList"></div>
 </section>
 </div>
-<script src="/assets/js/j.9179477b9417.js"></script>
+<script defer src="/assets/js/j.9179477b9417.js"></script>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
 <script src="../assets/js/inline-bundles/b.e942e1c830.js"></script>
