--- a/fortune/index.html
+++ b/fortune/index.html
@@ -33,14 +33,14 @@
   }
   </script>
 
-  <script src="/assets/js/j.9179477b9417.js"></script>
+  <script defer src="/assets/js/j.9179477b9417.js"></script>
   <link rel="stylesheet" href="/assets/c.9995eeb5cf82.css"/>
   <link rel="stylesheet" href="/assets/c.0b3d8a45f8c9.css"/>
   <script defer src="/assets/js/j.efba3509e62c.js"></script>
   <link rel="stylesheet" href="/assets/c.a50dd3bc5b33.css"/>
   <script defer src="/assets/js/j.8829a3ccde44.js"></script>
 
-  <link rel="stylesheet" href="/assets/css/fortune.v65.20260217.css"/>
+  <link rel="stylesheet" href="/assets/css/fortune.v62.20260217.css"/>
 
   <style>
     /* Fortune page refinements (keeps base language + premium spacing) */
@@ -54,13 +54,6 @@
     .fortune-kpi .v{margin-top:6px;font-size:14px;font-weight:950;line-height:1.5;color:rgba(255,255,255,.95)}
     .fortune-mini{font-size:12px;color:rgba(255,255,255,.72);line-height:1.55;margin-top:10px}
   </style>
-
-  <style>
-    .fortune-nate-iframe{width:100%;height:820px;border:0;border-radius:18px;background:#fff;}
-    @media (max-width: 680px){.fortune-nate-iframe{height:720px;}}
-    .fortune-embed-note{margin-top:8px;font-size:12px;opacity:.72;font-weight:900;}
-  </style>
-
 </head>
 <body>
   <h1 style="position:absolute;left:-9999px;">오늘의 운 브리핑 | 별자리·연애·신년운세</h1>
@@ -205,6 +198,6 @@
     </div>
   </div>
 
-  <script defer src="/assets/js/fortune.v65.20260217.js"></script>
+  <script defer src="/assets/js/fortune.v62.20260217.js"></script>
 </body>
 </html>
