--- a/guide/index.html
+++ b/guide/index.html
@@ -1,85 +1,70 @@
-<!DOCTYPE html>
-<html lang="ko" data-theme="light">
+<!doctype html>
+<html lang="ko">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>가이드 | 체크리스트·가이드 모음 | 88ST</title>
-  <meta name="description" content="88ST 가이드 모음: 입문 체크리스트, 용어 정리, 도구 사용법을 한 곳에서 확인합니다."/>
-  <meta name="keywords" content="88ST, 팔팔커뮤니티, 가이드, 체크리스트, 사용법, 용어"/>
-  <meta name="robots" content="index,follow"/>
-  <link rel="canonical" href="https://88st.cloud/guide/"/>
-  <meta property="og:type" content="website"/>
-  <meta property="og:site_name" content="88 (팔팔커뮤니티)"/>
-  <meta property="og:title" content="가이드 | 체크리스트·가이드 모음 | 88ST"/>
-  <meta property="og:description" content="체크리스트/가이드 모음"/>
-  <meta property="og:url" content="https://88st.cloud/guide/"/>
-  <meta property="og:image" content="/img/logo.png"/>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-  <link rel="stylesheet" href="/assets/c.9995eeb5cf82.css"/>
-  <link rel="stylesheet" href="/assets/c.43df7d0713c1.css"/>
-  <link rel="stylesheet" href="/assets/c.a50dd3bc5b33.css"/>
-  <style>
-    .hub-wrap{max-width:980px;margin:0 auto;padding:18px 14px 42px;}
-    .hub-hero{margin-top:12px;}
-    .hub-hero h1{font-size:18px;margin:0 0 8px 0;letter-spacing:-.02em;}
-    .hub-hero p{margin:0;color:var(--muted, rgba(255,255,255,.62));font-weight:900;}
-    .hub-grid{margin-top:14px;display:grid;gap:10px;grid-template-columns:1fr 1fr;}
-    @media(max-width:820px){.hub-grid{grid-template-columns:1fr;}}
-    .hub-card{border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.14);border-radius:18px;padding:14px;display:flex;gap:12px;align-items:center;box-shadow:0 10px 32px rgba(0,0,0,.12);}
-    .hub-ic{width:36px;height:36px;border-radius:14px;display:grid;place-items:center;background:rgba(var(--st-accent-rgb,95,178,255),.14);border:1px solid rgba(var(--st-accent-rgb,95,178,255),.25);flex:0 0 auto;}
-    .hub-t{font-weight:1100;}
-    .hub-d{font-size:12px;color:var(--muted, rgba(255,255,255,.62));font-weight:900;margin-top:2px;line-height:1.35;}
-    .hub-a{margin-left:auto;font-weight:1100;text-decoration:none;color:rgba(255,255,255,.92);padding:8px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.12);background:rgba(255,255,255,.06);}
-    .hub-a:hover{background:rgba(255,255,255,.10);}
-  </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>88ST 가이드 모음</title>
+  <meta name="description" content="보너스 체크리스트, 카지노/슬롯/미니게임 기본 가이드와 실전 체크 포인트." />
+  <link rel="canonical" href="https://88st.cloud/guide/" />
+
+  <link rel="stylesheet" href="/assets/css/x.e28fb3b19400.css" />
+  <link rel="stylesheet" href="/assets/c.9995f585c8ff.css" />
+  <link rel="stylesheet" href="/assets/c.0b319f0dba4a.css" />
+  <link rel="stylesheet" href="/assets/c.a50dd3c3eb6a.css" />
+  <link rel="stylesheet" href="/assets/c.home.v62.20260217.css" />
+
+  <meta name="theme-color" content="#0b0c10" />
+</head>
+<body>
+  <div id="shell"></div>
+
+  <main class="st-app">
+    <div class="page">
+      <div class="section-wrap">
+        <div class="section">
+          <div class="hero">
+            <div class="hero-badge">GUIDE</div>
+            <h1 class="hero-title">가이드 모음</h1>
+            <p class="hero-sub">처음 방문자도 바로 이해할 수 있게 핵심만 정리했습니다.</p>
+          </div>
+
+          <div class="quick-links" style="margin-top:14px">
+            <a class="quick-link" href="/bonus-checklist/">
+              <span class="ql-title">보너스 체크리스트</span>
+              <span class="ql-desc">약관/롤오버/리스크</span>
+            </a>
+            <a class="quick-link" href="/casino/">
+              <span class="ql-title">카지노 가이드</span>
+              <span class="ql-desc">기본 룰·주의사항</span>
+            </a>
+            <a class="quick-link" href="/casino-strategy/">
+              <span class="ql-title">카지노 전략</span>
+              <span class="ql-desc">세션 관리·실전 팁</span>
+            </a>
+            <a class="quick-link" href="/slot/">
+              <span class="ql-title">슬롯 가이드</span>
+              <span class="ql-desc">RTP/변동성 이해</span>
+            </a>
+            <a class="quick-link" href="/minigame/">
+              <span class="ql-title">미니게임 가이드</span>
+              <span class="ql-desc">연속/변동·손절</span>
+            </a>
+            <a class="quick-link" href="/fortune/">
+              <span class="ql-title">운세</span>
+              <span class="ql-desc">오늘의 브리핑</span>
+            </a>
+          </div>
+
+          <div class="card" style="margin-top:14px">
+            <div class="card-title">주의</div>
+            <div class="card-body">가이드는 정보 제공 목적이며, 과몰입/무리한 베팅은 금물입니다.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
   <script defer src="/assets/js/j.8829a3ccde44.js"></script>
   <script defer src="/assets/js/j.9179477b9417.js"></script>
-</head>
-<body class="st-app">
-  <main class="hub-wrap">
-    <section class="hub-hero">
-      <h1>가이드</h1>
-      <p>초보/입문자를 위한 최소 안내만 깔끔하게. (분석 결과는 참고용)</p>
-    </section>
-
-    <section class="hub-grid" aria-label="가이드 링크">
-      <div class="hub-card">
-        <div class="hub-ic">✓</div>
-        <div>
-          <div class="hub-t">입문 체크리스트</div>
-          <div class="hub-d">베팅 전 확인할 리스크 체크</div>
-        </div>
-        <a class="hub-a" href="/bonus-checklist/">열기 →</a>
-      </div>
-
-      <div class="hub-card">
-        <div class="hub-ic">i</div>
-        <div>
-          <div class="hub-t">도구 사용 가이드</div>
-          <div class="hub-d">각 분석기별 입력/해석 요령</div>
-        </div>
-        <a class="hub-a" href="/analysis/">열기 →</a>
-      </div>
-
-      <div class="hub-card">
-        <div class="hub-ic">★</div>
-        <div>
-          <div class="hub-t">인증사이트 이용 팁</div>
-          <div class="hub-d">입금/가입 전 기본 확인</div>
-        </div>
-        <a class="hub-a" href="/cert/">열기 →</a>
-      </div>
-
-      <div class="hub-card">
-        <div class="hub-ic">☘</div>
-        <div>
-          <div class="hub-t">운세 컨시어지 안내</div>
-          <div class="hub-d">컨디션/과몰입 경고 브리핑</div>
-        </div>
-        <a class="hub-a" href="/fortune/">열기 →</a>
-      </div>
-    </section>
-  </main>
 </body>
 </html>
