--- a/landing-b/index.html
+++ b/landing-b/index.html
@@ -36,7 +36,7 @@
   ]
 }
 </script>
-<script src="/assets/js/j.9179477b9417.js"></script>
+<script defer src="/assets/js/j.9179477b9417.js"></script>
 <script defer="" src="/assets/js/j.71bbe4a35d81.js"></script>
 <link href="/assets/c.d0474bb4988d.css" rel="stylesheet"/>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
@@ -74,44 +74,7 @@
 </div>
 <div class="note">※ 본 페이지는 참고용 안내이며, 결과/수익을 보장하지 않습니다. 과도한 이용은 지양하세요.</div>
 </div>
-<div aria-label="인증 업체 빠른보기" class="vendor-teaser" data-vt-fixed="1,2,3,4" data-vt-pick="2" data-vt-pool="10,11,8,7" id="vendorTeaser">
-<div class="vt-head">
-<div>
-<div class="vt-title">인증 업체 빠른보기</div>
-<div class="vt-sub">고정 4 + 오늘의 추천 2(페이지별 자동 로테이션) · 카드 클릭 → 상세 혜택/공지 · 가입코드 미입력 시 혜택 불가</div>
-</div>
-<div class="badge">보증·인증</div>
-</div>
-<div class="vt-sec-title">필수 추천 TOP4 (고정)</div>
-<div class="vendor-grid" data-vt-grid="fixed"></div>
-<div class="vt-sec-title">오늘의 추천 TOP2 (자동 로테이션)</div>
-<div class="vendor-grid" data-vt-grid="rot"></div>
-<div class="vt-actions">
-<a data-cta="vendor_teaser_all" data-utm="1" href="/cert/">전체 혜택/공지 보기</a>
-<a class="primary" data-cta="vendor_teaser_to_analysis" data-utm="1" href="/analysis/">분석기 바로가기</a>
-</div>
-</div>
-<div class="section">
-<div class="title">핵심 요약</div>
-<div class="content">보증업체/인증놀이터 선택에서 가장 큰 리스크는 ‘정보 비대칭’입니다. 고액 유저일수록 작은 조건 차이가 실제 체감(환전 속도·한도·응대 품질)에 크게 영향을 줍니다. 그래서 광고 문구보다 <b>운영 이력</b>, <b>조건의 명확성</b>, <b>문의/대응 라인 고정</b>을 우선으로 봐야 합니다. 88은 커뮤니티 피드백과 운영 히스토리를 기반으로 ‘불필요한 변동(조건 변경, 공지 불명확)’이 잦은 곳을 보수적으로 걸러내고, 카드 클릭 한 번으로 가입코드·혜택·주의사항·문의 채널을 즉시 확인하도록 구성했습니다. 아래 체크리스트를 먼저 보고, 메인에서 카드별 상세 안내를 확인하세요.</div>
-<ul class="ul">
-<li>운영 안정성: 장기 운영/커뮤니티 피드백/이슈 대응 이력</li><li>조건 명확성: 입플·페이백·출금 조건이 구체적으로 안내되는지</li><li>고액 동선: 환전/출금 속도, 한도, 절차(본인확인 등) 체크</li><li>문의 채널: 공식 텔레그램 1개로 고정인지(사칭 위험 감소)</li><li>이상 징후: 조건 변경이 잦거나 공지가 불명확하면 보수적으로</li>
-</ul>
-</div>
-<div class="section faq">
-<div class="title">FAQ</div>
-<details><summary>‘보증’이라는 단어만 믿어도 되나요?</summary><div class="a">아니요. 핵심은 <b>운영 이력</b>과 <b>조건 명확성</b>입니다. 이름보다 실사용 기준으로 체크하세요.</div></details><details><summary>사칭/가짜 관리자 구분은?</summary><div class="a">공식 문의 채널을 <b>한 곳으로 고정</b>하고, 메인 공지에 안내된 아이디만 사용하세요.</div></details><details><summary>카드에 없는 업체도 문의 가능한가요?</summary><div class="a">가능합니다. 다만 검증 기준을 통과하지 못하면 메인 목록에는 반영되지 않을 수 있습니다.</div></details><details><summary>고액 유저가 가장 많이 실수하는 포인트는?</summary><div class="a">혜택 문구만 보고 들어가서 <b>출금/환전 조건</b>을 늦게 확인하는 경우가 많습니다. 먼저 조건부터 보세요.</div></details>
-</div>
-<div class="footer">
-<div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
-<div class="smallLinks">
-<a data-d8593ac4d="DCpB9Ia44Dlk" data-utm="1" href="/landing-a/">입플·보너스</a>
-<a data-d8593ac4d="RcOU9v-aI3Ci" data-utm="1" href="/landing-b/">고액/보증업체</a>
-<a data-d8593ac4d="J28LX0swbI03" data-utm="1" href="/landing-c/">마진·EV</a>
-<a data-d8593ac4d="i0yF31r4DvND" data-utm="1" href="/landing-d/">배당 흐름</a>
-</div>
-</div>
-</div>
+
 <script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
