--- a/landing-d/index.html
+++ b/landing-d/index.html
@@ -36,7 +36,7 @@
   ]
 }
 </script>
-<script src="/assets/js/j.9179477b9417.js"></script>
+<script defer src="/assets/js/j.9179477b9417.js"></script>
 <script defer="" src="/assets/js/j.71bbe4a35d81.js"></script>
 <link href="/assets/c.d0474bb4988d.css" rel="stylesheet"/>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
@@ -74,44 +74,7 @@
 </div>
 <div class="note">※ 본 페이지는 참고용 안내이며, 결과/수익을 보장하지 않습니다. 과도한 이용은 지양하세요.</div>
 </div>
-<div aria-label="인증 업체 빠른보기" class="vendor-teaser" data-vt-fixed="1,2,3,4" data-vt-pick="2" data-vt-pool="10,11,8,7" id="vendorTeaser">
-<div class="vt-head">
-<div>
-<div class="vt-title">인증 업체 빠른보기</div>
-<div class="vt-sub">고정 4 + 오늘의 추천 2(페이지별 자동 로테이션) · 카드 클릭 → 상세 혜택/공지 · 가입코드 미입력 시 혜택 불가</div>
-</div>
-<div class="badge">보증·인증</div>
-</div>
-<div class="vt-sec-title">필수 추천 TOP4 (고정)</div>
-<div class="vendor-grid" data-vt-grid="fixed"></div>
-<div class="vt-sec-title">오늘의 추천 TOP2 (자동 로테이션)</div>
-<div class="vendor-grid" data-vt-grid="rot"></div>
-<div class="vt-actions">
-<a data-cta="vendor_teaser_all" data-utm="1" href="/cert/">전체 혜택/공지 보기</a>
-<a class="primary" data-cta="vendor_teaser_to_analysis" data-utm="1" href="/analysis/">분석기 바로가기</a>
-</div>
-</div>
-<div class="section">
-<div class="title">핵심 요약</div>
-<div class="content">배당 흐름(라인 변동)은 ‘정보 반영’과 ‘시장 심리’가 동시에 섞여 움직입니다. 그래서 단순히 오르고 내림만 보면 오해하기 쉽습니다. 핵심은 <b>변동의 속도</b>와 <b>마진 변화</b>를 같이 보는 것: 짧은 시간 급변은 라인 조정/뉴스 반영일 수 있고, 마진이 함께 올라가면 시장이 불안하거나 가격이 ‘비싸졌을’ 가능성이 있습니다. 88은 이런 구간을 체크할 때 무료 분석기에서 확률·마진·EV를 즉시 계산해 왜곡 가능성을 줄이는 흐름으로 구성했습니다. 경기 전후로 같은 시장을 시간대별로 비교 기록하면, 위험한 구간(과열/불확실)을 더 빨리 피할 수 있고 반대로 ‘가격이 좋은’ 타이밍도 더 명확히 잡을 수 있습니다.</div>
-<ul class="ul">
-<li>급변 구간: 짧은 시간에 큰 변동이면 뉴스/라인조정 가능성</li><li>마진 변화: 시장이 불안하면 마진이 높아지는 경우가 있음</li><li>종목 특성: 축구(무/언더)·농구(스프레드/OU) 등 체크 포인트 다름</li><li>기록 습관: 같은 경기/라인을 시간대별로 저장하면 판단이 쉬움</li><li>최종 확인: 메인에서 검증 카드/문의 채널로 조건까지 재확인</li>
-</ul>
-</div>
-<div class="section faq">
-<div class="title">FAQ</div>
-<details><summary>라인이 내려가면 ‘정답’인가요?</summary><div class="a">아니요. 라인은 정보·심리·조정이 섞입니다. 변동 이유를 추정하고, 마진/확률을 함께 보세요.</div></details><details><summary>과열 신호는 어떻게 보나요?</summary><div class="a">동일 시장에서 <b>짧은 시간 급변</b>, <b>마진 상승</b>, <b>반대 방향 재조정</b>이 반복되면 보수적으로 접근하는 게 좋습니다.</div></details><details><summary>어떤 종목이 라인 변동이 큰 편인가요?</summary><div class="a">리그/시장에 따라 다르지만, 정보 비대칭이 큰 구간(선발/결장 등)에서 변동이 커질 수 있습니다.</div></details><details><summary>분석기에서 바로 뭘 보면 되나요?</summary><div class="a">배당 입력 후 <b>마진</b>과 <b>정규화 확률</b>을 먼저 확인하고, 필요하면 EV까지 참고하세요.</div></details>
-</div>
-<div class="footer">
-<div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
-<div class="smallLinks">
-<a data-d8593ac4d="Uq9I1mdJQz1G" data-utm="1" href="/landing-a/">입플·보너스</a>
-<a data-d8593ac4d="gAm9TfF-XNPt" data-utm="1" href="/landing-b/">고액/보증업체</a>
-<a data-d8593ac4d="fTkFAzT6rzon" data-utm="1" href="/landing-c/">마진·EV</a>
-<a data-d8593ac4d="VX2l1qAw4WQA" data-utm="1" href="/landing-d/">배당 흐름</a>
-</div>
-</div>
-</div>
+
 <script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
