--- a/tool-slot/index.html
+++ b/tool-slot/index.html
@@ -85,7 +85,7 @@
   "url": "https://88st.cloud/tool-slot/",
   "description": "RTP·변동성·베팅·스핀수로 총베팅/기대손실/권장 뱅크롤을 계산하는 웹 도구"
 }</script>
-<script src="/assets/js/j.9179477b9417.js"></script>
+<script defer src="/assets/js/j.9179477b9417.js"></script>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.d2cf652ff950.js"></script>
@@ -234,7 +234,7 @@
         <button class="sl-fav-toggle" id="slDbFavBtn" type="button" aria-pressed="false">
           <span class="sl-fav-star" aria-hidden="true">★</span>
           <span class="sl-fav-text" id="slDbFavText">전체 보기</span>
-          <span class="sl-fav-chip" aria-hidden="true">★ 즐겨찾기</span>
+          <span class="sl-fav-chip" aria-hidden="true">즐겨찾기만</span>
         </button>
       </div>
 
