--- a/tool-virtual/index.html
+++ b/tool-virtual/index.html
@@ -30,7 +30,7 @@
   }
   </script>
 
-  <script src="/assets/js/j.9179477b9417.js"></script>
+  <script defer src="/assets/js/j.9179477b9417.js"></script>
   <script defer src="/assets/js/j.71bbe4a35d81.js"></script>
   <script defer src="/assets/js/j.d2cf652ff950.js"></script>
   <script defer src="/assets/js/j.efba3509e62c.js"></script>
