--- a/calc/index.html
+++ b/calc/index.html
@@ -1,103 +1,78 @@
-<!DOCTYPE html>
-<html lang="ko" data-theme="light">
+<!doctype html>
+<html lang="ko">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>계산기 모음 | 마진·EV·배당·Kelly | 88ST</title>
-  <meta name="description" content="88ST 계산기 모음: 오버라운드(마진), EV(기대값), 배당/확률 변환, Kelly 비중 등 핵심 계산기를 한 곳에서 빠르게 이동합니다."/>
-  <meta name="keywords" content="88ST, 팔팔커뮤니티, 마진 계산기, 오버라운드, EV 계산기, 배당 확률 변환, Kelly 비중, 스포츠 계산기"/>
-  <meta name="robots" content="index,follow"/>
-  <link rel="canonical" href="https://88st.cloud/calc/"/>
-  <meta property="og:type" content="website"/>
-  <meta property="og:site_name" content="88 (팔팔커뮤니티)"/>
-  <meta property="og:title" content="계산기 모음 | 마진·EV·배당·Kelly | 88ST"/>
-  <meta property="og:description" content="오버라운드·EV·배당/확률·Kelly 등 핵심 계산기 모음"/>
-  <meta property="og:url" content="https://88st.cloud/calc/"/>
-  <meta property="og:image" content="/img/logo.png"/>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-  <link rel="stylesheet" href="/assets/c.9995eeb5cf82.css"/>
-  <link rel="stylesheet" href="/assets/c.43df7d0713c1.css"/>
-  <link rel="stylesheet" href="/assets/c.a50dd3bc5b33.css"/>
-  <style>
-    .hub-wrap{max-width:980px;margin:0 auto;padding:18px 14px 42px;}
-    .hub-hero{margin-top:12px;}
-    .hub-hero h1{font-size:18px;margin:0 0 8px 0;letter-spacing:-.02em;}
-    .hub-hero p{margin:0;color:var(--muted, rgba(255,255,255,.62));font-weight:900;}
-    .hub-grid{margin-top:14px;display:grid;gap:10px;grid-template-columns:1fr 1fr;}
-    @media(max-width:820px){.hub-grid{grid-template-columns:1fr;}}
-    .hub-card{border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.14);border-radius:18px;padding:14px;display:flex;gap:12px;align-items:center;box-shadow:0 10px 32px rgba(0,0,0,.12);}
-    .hub-ic{width:36px;height:36px;border-radius:14px;display:grid;place-items:center;background:rgba(var(--st-accent-rgb,95,178,255),.14);border:1px solid rgba(var(--st-accent-rgb,95,178,255),.25);flex:0 0 auto;}
-    .hub-t{font-weight:1100;}
-    .hub-d{font-size:12px;color:var(--muted, rgba(255,255,255,.62));font-weight:900;margin-top:2px;line-height:1.35;}
-    .hub-a{margin-left:auto;font-weight:1100;text-decoration:none;color:rgba(255,255,255,.92);padding:8px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.12);background:rgba(255,255,255,.06);}
-    .hub-a:hover{background:rgba(255,255,255,.10);}
-  </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>88ST 계산기/분석기 모음</title>
+  <meta name="description" content="스포츠·카지노·슬롯·미니게임 분석 도구 모음. EV/마진/배당/켈리/슈 트래커/슬롯 환수율 DB." />
+  <link rel="canonical" href="https://88st.cloud/calc/" />
+
+  <link rel="stylesheet" href="/assets/css/x.e28fb3b19400.css" />
+  <link rel="stylesheet" href="/assets/c.9995f585c8ff.css" />
+  <link rel="stylesheet" href="/assets/c.0b319f0dba4a.css" />
+  <link rel="stylesheet" href="/assets/c.a50dd3c3eb6a.css" />
+  <link rel="stylesheet" href="/assets/c.home.v62.20260217.css" />
+
+  <meta name="theme-color" content="#0b0c10" />
+</head>
+<body>
+  <div id="shell"></div>
+
+  <main class="st-app">
+    <div class="page">
+      <div class="section-wrap">
+        <div class="section">
+          <div class="hero">
+            <div class="hero-badge">TOOLS</div>
+            <h1 class="hero-title">계산기/분석기 모음</h1>
+            <p class="hero-sub">가장 많이 쓰는 도구만 깔끔하게 모았습니다. (PC/모바일 동일 UX)</p>
+          </div>
+
+          <div class="quick-links" style="margin-top:14px">
+            <a class="quick-link" href="/tool-ev/">
+              <span class="ql-title">EV 계산기</span>
+              <span class="ql-desc">기대값/손익 분기점</span>
+            </a>
+            <a class="quick-link" href="/tool-margin/">
+              <span class="ql-title">마진 분석기</span>
+              <span class="ql-desc">오즈 마진/비교</span>
+            </a>
+            <a class="quick-link" href="/tool-odds/">
+              <span class="ql-title">배당 변환</span>
+              <span class="ql-desc">HK/Decimal/US</span>
+            </a>
+            <a class="quick-link" href="/kelly/">
+              <span class="ql-title">켈리 계산기</span>
+              <span class="ql-desc">배팅 사이징</span>
+            </a>
+            <a class="quick-link" href="/tool-casino/">
+              <span class="ql-title">카지노 분석기</span>
+              <span class="ql-desc">EVO·슈 트래커</span>
+            </a>
+            <a class="quick-link" href="/tool-slot/">
+              <span class="ql-title">슬롯 분석기</span>
+              <span class="ql-desc">Pragmatic DB·즐겨찾기</span>
+            </a>
+            <a class="quick-link" href="/tool-minigame/">
+              <span class="ql-title">미니게임 분석기</span>
+              <span class="ql-desc">연속/세션 리스크</span>
+            </a>
+            <a class="quick-link" href="/cert/">
+              <span class="ql-title">인증 사이트</span>
+              <span class="ql-desc">검증·가이드</span>
+            </a>
+          </div>
+
+          <div class="card" style="margin-top:14px">
+            <div class="card-title">TIP</div>
+            <div class="card-body">도구는 모두 <b>로컬(브라우저)</b>에서 동작하며, 입력값/히스토리는 기기 내 저장입니다.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
   <script defer src="/assets/js/j.8829a3ccde44.js"></script>
   <script defer src="/assets/js/j.9179477b9417.js"></script>
-</head>
-<body class="st-app">
-  <main class="hub-wrap">
-    <section class="hub-hero">
-      <h1>계산기 모음</h1>
-      <p>필요한 계산만 빠르게. 결과는 참고용이며, 과몰입/추격 베팅은 피해주세요.</p>
-    </section>
-
-    <section class="hub-grid" aria-label="계산기 링크">
-      <div class="hub-card">
-        <div class="hub-ic">%</div>
-        <div>
-          <div class="hub-t">오버라운드(마진) 계산기</div>
-          <div class="hub-d">라인의 “비용”을 빠르게 확인</div>
-        </div>
-        <a class="hub-a" href="/tool-margin/">열기 →</a>
-      </div>
-
-      <div class="hub-card">
-        <div class="hub-ic">EV</div>
-        <div>
-          <div class="hub-t">EV(기대값) 계산기</div>
-          <div class="hub-d">확률·배당 기반 기대값/엣지</div>
-        </div>
-        <a class="hub-a" href="/tool-ev/">열기 →</a>
-      </div>
-
-      <div class="hub-card">
-        <div class="hub-ic">↔</div>
-        <div>
-          <div class="hub-t">배당 ↔ 확률 변환</div>
-          <div class="hub-d">유럽식/확률 빠른 변환</div>
-        </div>
-        <a class="hub-a" href="/tool-odds/">열기 →</a>
-      </div>
-
-      <div class="hub-card">
-        <div class="hub-ic">K</div>
-        <div>
-          <div class="hub-t">Kelly 비중 계산</div>
-          <div class="hub-d">과도한 비중 방지용 가이드</div>
-        </div>
-        <a class="hub-a" href="/tool/kelly/">열기 →</a>
-      </div>
-
-      <div class="hub-card">
-        <div class="hub-ic">♣</div>
-        <div>
-          <div class="hub-t">카지노 전략 분석기</div>
-          <div class="hub-d">전략 플로우·세션 손익·리스크</div>
-        </div>
-        <a class="hub-a" href="/tool-casino/">열기 →</a>
-      </div>
-
-      <div class="hub-card">
-        <div class="hub-ic">☘</div>
-        <div>
-          <div class="hub-t">운세 컨시어지</div>
-          <div class="hub-d">이탈 방지용 컨텐츠 · 컨디션 브리핑</div>
-        </div>
-        <a class="hub-a" href="/fortune/">열기 →</a>
-      </div>
-    </section>
-  </main>
 </body>
 </html>
