--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 <link href="/assets/css/x.9d7841e705c5.css" rel="stylesheet"/>
-<script src="/assets/js/inline-bundles/b.fa5e828602.js"></script>
+<script defer src="/assets/js/inline-bundles/b.fa5e828602.js"></script>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -64,13 +64,13 @@
 }
 </script>
 <link href="/assets/c.a693fe39b0c5.css" rel="stylesheet"/>
-<script src="/assets/js/j.9179477b9417.js"></script>
+<script defer src="/assets/js/j.9179477b9417.js"></script>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-<link href="/assets/css/fortune.v65.20260217.css" rel="stylesheet"/>
+<link href="/assets/css/fortune.v62.20260217.css" rel="stylesheet"/>
 <meta content="https://88st.cloud/img/logo.png" property="og:image"/>
 <script type="application/ld+json">
 {
@@ -172,54 +172,72 @@
 </div>
 </div>
 
-
 <div class="section" id="whySection">
-  <div class="section-header">
-    <div class="title">왜 88 분석기를 써야 하나요?</div>
-    <a class="insight-btn btn-mini" href="/guide/">가이드 보기 <span aria-hidden="true">→</span></a>
-  </div>
-
-  <div class="why-grid" style="margin-top:12px;">
-    <div class="why-card">
-      <div class="why-ic" aria-hidden="true">🧭</div>
-      <div class="why-t">선택의 서포터</div>
-      <div class="why-d">방문자는 이미 분석을 끝낸 상태. 우리는 <b>마지막 체크</b>를 빠르게 제공합니다.</div>
-    </div>
-
-    <div class="why-card">
-      <div class="why-ic" aria-hidden="true">%</div>
-      <div class="why-t">확률 표기 중심</div>
-      <div class="why-d">애매한 “계산기 느낌” 대신, 입력 기반으로 <b>확률/리스크</b>를 명확하게 표시합니다.</div>
-    </div>
-
-    <div class="why-card">
-      <div class="why-ic" aria-hidden="true">🛡️</div>
-      <div class="why-t">세션·자금관리</div>
-      <div class="why-d">연속/편차/분산 신호로 과몰입을 경고하고, 손절·목표 기반 운영을 돕습니다.</div>
-    </div>
-
-    <div class="why-card">
-      <div class="why-ic" aria-hidden="true">⚡</div>
-      <div class="why-t">통일된 UX</div>
-      <div class="why-d">스포츠·카지노·슬롯·미니게임까지 같은 규칙의 UI로 <b>빠르게 이동</b>합니다.</div>
-    </div>
-  </div>
-
-  <div class="why-cta" style="margin-top:12px;display:flex;flex-wrap:wrap;gap:8px;">
-    <a class="insight-btn primary" href="/tool-sports/">스포츠 분석기 <span aria-hidden="true">→</span></a>
-    <a class="insight-btn" href="/tool-casino/">카지노 분석기 <span aria-hidden="true">→</span></a>
-    <a class="insight-btn" href="/tool-slot/">슬롯 분석기 <span aria-hidden="true">→</span></a>
-    <a class="insight-btn" href="/tool-minigame/">미니게임 분석기 <span aria-hidden="true">→</span></a>
-  </div>
+<div class="title"><span class="badge">WHY</span>왜 88 분석기를 써야 하나요?</div>
+<div aria-label="WHY 섹션(스포츠/카지노)" class="why-split">
+<div aria-label="스포츠 배당 분석기" class="why-card">
+<div class="why-kicker">스포츠 배당 분석기</div>
+<div class="why-head"><b>3초 안에 결론</b>이 나오는 구조로 설계했습니다.</div>
+<ul class="why-list">
+<li><b>마진(오버라운드)</b>로 “비용이 낮은 라인”을 빠르게 분류</li>
+<li><b>공정배당·정규화 확률</b>로 시장이 말하는 확률을 한 번에 확인</li>
+</ul>
+<div class="why-note">같은 시장/종류라면 <b>마진이 낮을수록</b> 비용(수수료)이 낮은 편입니다. (참고용)</div>
+<div class="why-cta"><a class="insight-btn primary" data-cta="open_tool_sports" href="/analysis/">스포츠 분석기 열기 <span aria-hidden="true">→</span></a></div>
 </div>
-
+<div aria-label="가상스포츠 분석기" class="why-card">
+<div class="why-kicker">가상스포츠 분석기</div>
+<div class="why-head"><b>Bet365 가상게임 전 종목</b> 배당을 입력하면 마진/공정확률/공정배당을 즉시 정리해 줍니다.</div>
+<ul class="why-list">
+<li><b>종목·마켓 선택</b>으로 승/무/패 · 오버/언더 · 핸디 · 다중 우승자까지 즉시 분석</li>
+<li><b>오버라운드(마진)</b> + <b>공정확률/공정배당</b> 자동 정규화</li>
+<li><b>라인 다중 붙여넣기</b>로 오버/언더 라인별 마진·공정배당을 한 번에 비교</li>
+<li><b>베스트</b>: 공정대비 ‘덜 불리한 선택’을 자동 표시</li>
+</ul>
+<div class="why-note">이 도구는 ‘예측’이 아니라 <b>수학 기반 판단 보조</b>입니다. 과몰입을 피하세요.</div>
+<div class="why-cta"><a class="insight-btn primary" data-cta="open_tool_virtual" href="/tool-virtual/">BET365 가상게임 분석기 열기 <span aria-hidden="true">→</span></a></div>
+</div>
+<div aria-label="미니게임 분석기" class="why-card">
+<div class="why-kicker">미니게임 분석기</div>
+<div class="why-head"><b>최근 결과를 한 번에 정리</b>해서 ‘흐름/편향’을 빠르게 확인합니다.</div>
+<ul class="why-list">
+<li><b>최근 N회</b> 입력/저장 → 홀·짝/언더·오버 등 <b>빈도·확률</b> 자동 집계</li>
+<li><b>연속·전환</b> 지표로 단순 감(느낌) 대신 <b>숫자 기반 체크</b></li>
+<li><b>히스토리</b>로 오늘 데이터만 깔끔하게 관리 (초기화/저장/불러오기)</li>
+</ul>
+<div class="why-note">결과를 “보기 좋게 정리”하는 도구입니다. 과몰입을 피하고, 기록은 짧게 가져가세요.</div>
+<div class="why-cta"><a class="insight-btn primary" data-cta="open_tool_minigame" href="/tool-minigame/">미니게임 분석기 열기 <span aria-hidden="true">→</span></a></div>
+</div>
+<div aria-label="카지노 전략 분석기" class="why-card">
+<div class="why-kicker">카지노 전략 분석기</div>
+<div class="why-head"><b>턴이 빠른 게임</b>에서도 ‘다음 베팅’을 실수 없이 정리합니다.</div>
+<ul class="why-list">
+<li><b>전략 선택</b>: 마틴·파롤리·달랑·오스카·피보·라부셰르를 한 화면에서 비교</li>
+<li><b>WIN/LOSE 1탭</b>으로 다음 스텝 자동 계산 (UNDO 포함)</li>
+<li><b>세션 관리</b>: 누적손익 · 최대낙폭(MDD) · 회복까지 필요한 1승 베팅 표시</li>
+<li><b>프리셋</b>: 바카라 PLAYER 2.00 / BANKER 1.97 + 단위/올림 규칙까지 실전 속도 대응</li>
+</ul>
+<div class="why-note">단순 ‘계산기’가 아니라, <b>실전 세션 운영</b>에 필요한 숫자를 한 번에 보여줍니다.</div>
+<div class="why-cta"><a class="insight-btn primary" data-cta="open_tool_casino" href="/tool-casino/">카지노 전략 분석기 열기 <span aria-hidden="true">→</span></a></div>
+</div>
+<div aria-label="슬롯 환수율(RTP) 분석기" class="why-card">
+<div class="why-kicker">슬롯 환수율(RTP) 분석기</div>
+<div class="why-head"><b>RTP·변동성</b>을 숫자로 정리해, 세션 비용과 리스크를 빠르게 관리합니다.</div>
+<ul class="why-list">
+<li><b>총 베팅/기대 손실</b>을 즉시 계산해 “세션 비용”을 투명하게 확인</li>
+<li><b>RTP는 운영사/버전</b>에 따라 다를 수 있어, <b>게임 내 정보(i)</b>·페이테이블 기준으로 입력</li>
+<li><b>변동성 기준 권장 뱅크롤</b>과 <b>손절선</b>을 제안해 과몰입 방지</li>
+<li><b>최근 저장/공유</b>로 게임별 설정을 빠르게 복원 (RTP 버전 메모 가능)</li>
+</ul>
+<div class="why-note">이 도구는 ‘예측’이 아니라 <b>세션/자금관리</b>를 위한 참고용 분석기입니다.</div>
+<div class="why-cta"><a class="insight-btn primary" data-cta="open_tool_slot" href="/tool-slot/">슬롯 환수율(RTP) 분석기 열기 <span aria-hidden="true">→</span></a></div>
 <div class="section" id="fortuneSection">
   <div class="section-header">
     <div class="title"><span class="badge">LUCK</span>오늘의 운 브리핑</div>
     <a class="insight-btn btn-mini" href="/fortune/">전체 보기 <span aria-hidden="true">→</span></a>
   </div>
 
-  <div class="fortune-widget is-compact" data-role="fortuneWidget" data-mode="compact">
+  <div class="fortune-widget" data-role="fortuneWidget">
     <div class="fortune-left">
       <div aria-label="오늘의 운 점수" class="fortune-ring" role="img">
         <div class="fortune-ring-inner">
@@ -227,41 +245,80 @@
           <div class="fortune-date" id="fortuneDate">—</div>
         </div>
       </div>
+
+      <div class="fortune-pick fortune-profile">
+        <label class="fortune-label" for="fortuneDob">생년월일</label>
+        <div class="fortune-profile-row">
+          <input class="fortune-input" id="fortuneDob" type="date" inputmode="numeric" placeholder="YYYY-MM-DD"/>
+          <button class="fortune-btn fortune-query" id="fortuneQuery" type="button">조회</button>
+        </div>
+        <div class="fortune-profile-hint fortune-muted">입력하면 별자리/띠가 자동 적용됩니다.</div>
+      </div>
+
+      <div class="fortune-pick">
+        <label class="fortune-label" for="fortuneSign">별자리</label>
+        <select class="insight-select" id="fortuneSign">
+          <option value="aries">양자리</option>
+          <option value="taurus">황소자리</option>
+          <option value="gemini">쌍둥이자리</option>
+          <option value="cancer">게자리</option>
+          <option value="leo">사자자리</option>
+          <option value="virgo">처녀자리</option>
+          <option value="libra">천칭자리</option>
+          <option value="scorpio">전갈자리</option>
+          <option value="sagittarius">사수자리</option>
+          <option value="capricorn">염소자리</option>
+          <option value="aquarius">물병자리</option>
+          <option value="pisces">물고기자리</option>
+        </select>
+      </div>
+
+      <div class="fortune-pick">
+        <label class="fortune-label" for="fortuneLevel">브리핑 레벨</label>
+        <select class="insight-select" id="fortuneLevel">
+          <option value="beginner">초급</option>
+          <option value="pro">프로</option>
+          <option value="risk">하이리스크 경고</option>
+        </select>
+      </div>
     </div>
 
     <div class="fortune-right">
-      <div class="fortune-compact-top">
-        <div class="fortune-compact-form">
-          <label class="fortune-label" for="fortuneDob">생년월일</label>
-          <div class="fortune-profile-row">
-            <input class="fortune-input" id="fortuneDob" type="date" inputmode="numeric" placeholder="YYYY-MM-DD"/>
-            <button class="fortune-btn fortune-query" id="fortuneQuery" type="button">조회</button>
-            <select class="insight-select" id="fortuneLevel" aria-label="브리핑 레벨">
-              <option value="beginner">초급</option>
-              <option value="pro">프로</option>
-              <option value="risk">하이리스크</option>
-            </select>
-          </div>
-          <div class="fortune-profile-hint fortune-muted">메인에서는 요약만 표시됩니다. 상세는 우측 상단 “전체 보기”에서 확인하세요.</div>
-        </div>
+      <div class="fortune-head" id="fortuneHead">—</div>
+      <div class="fortune-lines">
+        <div class="fortune-line"><span>행운 키워드</span><b id="fortuneKeyword">—</b></div>
+        <div class="fortune-line"><span>행운 컬러</span><b id="fortuneColor">—</b></div>
+        <div class="fortune-line"><span>행운 숫자</span><b id="fortuneNumber">—</b></div>
+        <div class="fortune-line"><span>미션</span><b id="fortuneMission">—</b></div>
       </div>
 
-      <div class="fortune-compact-line" id="fortuneCompactLine">—</div>
-
-      <div class="fortune-actions fortune-actions-compact" style="margin-top:10px;display:flex;gap:8px;flex-wrap:wrap;">
-        <a class="insight-btn btn-mini" id="fortuneDetailLink" href="/fortune/">상세 브리핑 <span aria-hidden="true">→</span></a>
-        <a class="insight-btn btn-mini" href="/fortune/#nate">네이트 원문 <span aria-hidden="true">↗</span></a>
+      <div class="fortune-ban">
+        <span class="k">오늘의 금지 행동</span>
+        <b class="v" id="fortuneBan">—</b>
       </div>
+
+      <div class="fortune-actions">
+        <button class="insight-btn" id="fortuneSpeak" type="button">운세 듣기</button>
+        <button class="fortune-btn" id="fortuneSilly" type="button">쓸데없는 운세</button>
+        <button class="fortune-btn" id="fortuneCopy" type="button">요약 복사</button>
+      </div>
+
+      <div class="fortune-silly" hidden id="fortuneSillyBox">
+        <div class="fortune-silly-title">쓸데없지만 은근 쓸모있는 한 줄</div>
+        <div class="fortune-silly-text" id="fortuneSillyText">—</div>
+      </div>
+      <div class="fortune-note">※ 엔터테인먼트용 브리핑입니다. 예측이 아니라 <b>컨디션·리듬·충동 억제</b>를 위한 참고로만 사용하세요.</div>
     </div>
   </div>
 </div>
 
+
 </div>
 </div>
 </div>
 </div>
 </div>
-<script defer="" src="/assets/js/fortune.v65.20260217.js"></script>
+<script defer="" src="/assets/js/fortune.v62.20260217.js"></script>
 <script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
