--- a/landing-a/index.html
+++ b/landing-a/index.html
@@ -36,7 +36,7 @@
   ]
 }
 </script>
-<script src="/assets/js/j.9179477b9417.js"></script>
+<script defer src="/assets/js/j.9179477b9417.js"></script>
 <script defer="" src="/assets/js/j.71bbe4a35d81.js"></script>
 <link href="/assets/c.d0474bb4988d.css" rel="stylesheet"/>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
@@ -74,44 +74,7 @@
 </div>
 <div class="note">※ 본 페이지는 참고용 안내이며, 결과/수익을 보장하지 않습니다. 과도한 이용은 지양하세요.</div>
 </div>
-<div aria-label="인증 업체 빠른보기" class="vendor-teaser" data-vt-fixed="1,2,3,4" data-vt-pick="2" data-vt-pool="10,11,8,7" id="vendorTeaser">
-<div class="vt-head">
-<div>
-<div class="vt-title">인증 업체 빠른보기</div>
-<div class="vt-sub">고정 4 + 오늘의 추천 2(페이지별 자동 로테이션) · 카드 클릭 → 상세 혜택/공지 · 가입코드 미입력 시 혜택 불가</div>
-</div>
-<div class="badge">보증·인증</div>
-</div>
-<div class="vt-sec-title">필수 추천 TOP4 (고정)</div>
-<div class="vendor-grid" data-vt-grid="fixed"></div>
-<div class="vt-sec-title">오늘의 추천 TOP2 (자동 로테이션)</div>
-<div class="vendor-grid" data-vt-grid="rot"></div>
-<div class="vt-actions">
-<a data-cta="vendor_teaser_all" data-utm="1" href="/cert/">전체 혜택/공지 보기</a>
-<a class="primary" data-cta="vendor_teaser_to_analysis" data-utm="1" href="/analysis/">분석기 바로가기</a>
-</div>
-</div>
-<div class="section">
-<div class="title">핵심 요약</div>
-<div class="content">입금플러스(입플)·보너스·페이백은 숫자만 보고 선택하면 손해가 나기 쉬운 영역입니다. 핵심은 ‘지급 조건’이에요: 롤링(베팅량) 기준, 적용 게임(카지노/슬롯/미니게임) 제한, 최대 지급·상한, 그리고 페이백 산정 방식(손익 기준인지, 실베팅 기준인지)까지 한 번에 확인해야 합니다. 88은 혜택 문구를 최대한 명확히 정리하고, 필요할 때는 무료 분석기에서 마진/확률/EV를 같이 확인해 ‘보기 좋은 문구’가 아니라 ‘실제 체감’ 기준으로 비교할 수 있게 구성했습니다. 아래 체크리스트대로 확인하면 불필요한 리스크를 줄이고, 본인 스타일(고액/소액·단기/장기)에 맞는 구조를 더 빠르게 고를 수 있습니다.</div>
-<ul class="ul">
-<li>입플/보너스: 적용 게임·최대 지급·롤링/조건을 먼저 확인</li><li>페이백: 기준(스포츠/카지노/미니게임)·정산 주기·상한 확인</li><li>고액 유저라면: 환전/출금 동선과 문의 응대 채널 고정 여부 확인</li><li>마진/EV: 같은 배당이라도 마진이 높으면 체감 손해가 커질 수 있음</li><li>검증/추천: 운영 이력·조건 명확성·문의 가능 여부 기준으로 정리</li>
-</ul>
-</div>
-<div class="section faq">
-<div class="title">FAQ</div>
-<details><summary>입플/페이백은 무조건 많이 주는 곳이 좋은가요?</summary><div class="a">아니요. 지급률보다 <b>조건(롤링/상한/게임 제한/출금 조건)</b>이 더 중요합니다. 조건이 불리하면 체감 혜택이 작아집니다.</div></details><details><summary>고액 유저가 특히 체크해야 할 포인트는?</summary><div class="a"><b>출금 안정성</b>, <b>환전 속도</b>, <b>문의 채널 고정</b>을 우선 보세요. 조건이 애매하면 리스크가 커집니다.</div></details><details><summary>분석기는 카지노/슬롯에도 도움이 되나요?</summary><div class="a">분석기는 주로 <b>배당/마진/EV</b> 확인용입니다. 스포츠/미니게임 배당을 다룰 때 특히 유용합니다.</div></details><details><summary>혜택이 바뀌면 어떻게 확인하나요?</summary><div class="a">메인 ‘88 인증놀이터’에서 최신 안내를 확인하고, 팝업 내 공지/문의 채널로 재확인하세요.</div></details>
-</div>
-<div class="footer">
-<div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
-<div class="smallLinks">
-<a data-d8593ac4d="0Cb_wGqVSWM0" data-utm="1" href="/landing-a/">입플·보너스</a>
-<a data-d8593ac4d="M2tqoQKkVtzd" data-utm="1" href="/landing-b/">고액/보증업체</a>
-<a data-d8593ac4d="VRuHYPCwbUa9" data-utm="1" href="/landing-c/">마진·EV</a>
-<a data-d8593ac4d="xV-XOhoSeUB5" data-utm="1" href="/landing-d/">배당 흐름</a>
-</div>
-</div>
-</div>
+
 <script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
