--- a/landing-c/index.html
+++ b/landing-c/index.html
@@ -36,7 +36,7 @@
   ]
 }
 </script>
-<script src="/assets/js/j.9179477b9417.js"></script>
+<script defer src="/assets/js/j.9179477b9417.js"></script>
 <script defer="" src="/assets/js/j.71bbe4a35d81.js"></script>
 <link href="/assets/c.d0474bb4988d.css" rel="stylesheet"/>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
@@ -74,44 +74,7 @@
 </div>
 <div class="note">※ 본 페이지는 참고용 안내이며, 결과/수익을 보장하지 않습니다. 과도한 이용은 지양하세요.</div>
 </div>
-<div aria-label="인증 업체 빠른보기" class="vendor-teaser" data-vt-fixed="1,2,3,4" data-vt-pick="2" data-vt-pool="10,11,8,7" id="vendorTeaser">
-<div class="vt-head">
-<div>
-<div class="vt-title">인증 업체 빠른보기</div>
-<div class="vt-sub">고정 4 + 오늘의 추천 2(페이지별 자동 로테이션) · 카드 클릭 → 상세 혜택/공지 · 가입코드 미입력 시 혜택 불가</div>
-</div>
-<div class="badge">보증·인증</div>
-</div>
-<div class="vt-sec-title">필수 추천 TOP4 (고정)</div>
-<div class="vendor-grid" data-vt-grid="fixed"></div>
-<div class="vt-sec-title">오늘의 추천 TOP2 (자동 로테이션)</div>
-<div class="vendor-grid" data-vt-grid="rot"></div>
-<div class="vt-actions">
-<a data-cta="vendor_teaser_all" data-utm="1" href="/cert/">전체 혜택/공지 보기</a>
-<a class="primary" data-cta="vendor_teaser_to_analysis" data-utm="1" href="/analysis/">분석기 바로가기</a>
-</div>
-</div>
-<div class="section">
-<div class="title">핵심 요약</div>
-<div class="content">배당은 단순 숫자가 아니라 ‘암묵적 확률(1/배당)’에 가깝습니다. 문제는 북메이커 마진(오버라운드) 때문에 그대로 확률로 쓰면 왜곡이 생긴다는 점이에요. 예를 들어 배당이 좋아 보이더라도 마진이 높으면 장기적으로 불리할 수 있습니다. 88 분석기는 배당을 입력하면 마진을 추정하고, 마진을 제거한 정규화 확률(참고)을 계산해 비교를 쉽게 만듭니다. 여기에 본인이 생각하는 확률(또는 시장 비교)을 기반으로 EV(+EV 여부)까지 확인할 수 있게 해두면, ‘감’이 아니라 ‘수치’로 판단하는 습관을 만들기 좋습니다. 초보는 2-way(승/패)부터, 축구는 3-way(홈/무/원정)로 입력해 보세요.</div>
-<ul class="ul">
-<li>마진(오버라운드)이 낮을수록 ‘가격’이 유리한 편</li><li>2-way: 농구/야구/핸디 등 승패 구조에 바로 사용</li><li>3-way: 축구 1X2(홈/무/원정) 확률 정규화에 적합</li><li>EV(+EV): 본인 추정 확률 대비 배당이 유리한지 체크(참고용)</li><li>히스토리/비교: 같은 경기 라인 변화를 기록하면 판단이 쉬워짐</li>
-</ul>
-</div>
-<div class="section faq">
-<div class="title">FAQ</div>
-<details><summary>마진이 낮으면 무조건 이긴다는 뜻인가요?</summary><div class="a">아니요. 마진은 ‘수수료’에 가깝습니다. <b>조건이 같다면</b> 마진이 낮은 쪽이 유리할 가능성이 큽니다.</div></details><details><summary>EV는 어떻게 쓰는 게 좋아요?</summary><div class="a">EV는 참고 지표입니다. 본인 기준 확률이 필요하며, <b>라인 비교</b>나 <b>의사결정 보조</b>로 활용하는 것을 권장합니다.</div></details><details><summary>2-way/3-way를 언제 쓰나요?</summary><div class="a">승패 구조(농구/야구 등)는 2-way, 1X2 구조(축구)는 3-way가 기본입니다.</div></details><details><summary>초보가 가장 많이 하는 실수는?</summary><div class="a">한 번의 결과로 확신하는 것입니다. 같은 리그/시장 데이터를 <b>반복 기록</b>하며 체감하는 게 중요합니다.</div></details>
-</div>
-<div class="footer">
-<div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
-<div class="smallLinks">
-<a data-d8593ac4d="WwoscFn_6d5t" data-utm="1" href="/landing-a/">입플·보너스</a>
-<a data-d8593ac4d="HeNiuBH6qdIz" data-utm="1" href="/landing-b/">고액/보증업체</a>
-<a data-d8593ac4d="m22e10u_2S1e" data-utm="1" href="/landing-c/">마진·EV</a>
-<a data-d8593ac4d="J6mE9f29a2tJ" data-utm="1" href="/landing-d/">배당 흐름</a>
-</div>
-</div>
-</div>
+
 <script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
