--- a/tool/kelly/index.html
+++ b/tool/kelly/index.html
@@ -16,7 +16,7 @@
 <link href="/assets/c.d0474bb4988d.css" rel="stylesheet"/>
 <link href="/assets/css/x.47ddb177636d.css" rel="stylesheet"/>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"켈리 기준은 무엇인가요?","acceptedAnswer":{"@type":"Answer","text":"켈리 기준은 장기 로그성장률을 최대화하는 베팅 비중을 산출하는 방법입니다. 변동성이 커서 보수적(1/2, 1/4 Kelly)으로 쓰는 경우가 많습니다."}},{"@type":"Question","name":"확률이 정확하지 않으면 어떻게 되나요?","acceptedAnswer":{"@type":"Answer","text":"내 예상 확률이 과대평가되면 권장 비중이 과도해질 수 있습니다. 보수 계수(예: 1/4 Kelly)와 최대 비중 캡을 함께 사용하는 것을 권장합니다."}},{"@type":"Question","name":"켈리가 0% 이하로 나오면?","acceptedAnswer":{"@type":"Answer","text":"해당 입력 조건에서는 기대값이 음수로 해석될 수 있어 비중 0%가 권장됩니다."}},{"@type":"Question","name":"이 도구는 투자/배팅 조언인가요?","acceptedAnswer":{"@type":"Answer","text":"아니요. 본 도구는 판단 보조용 계산기이며, 결과/수익을 보장하지 않습니다."}}]}</script>
-<script src="/assets/js/j.9179477b9417.js"></script>
+<script defer src="/assets/js/j.9179477b9417.js"></script>
 <script defer="" src="/assets/js/j.71bbe4a35d81.js"></script>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
@@ -86,19 +86,8 @@
       </div>
 </div>
 </div>
-<script data-src="../../assets/config/toolconfig/c.4f53f5a25f.json" id="__88stToolConfig" type="application/json"></script><div class="vt-sub">고정 4 + 오늘의 추천 2(페이지별 자동 로테이션) · 카드 클릭 → 상세 혜택/공지 · 가입코드 미입력 시 혜택 불가</div>
-</div>
-<div class="badge">보증·인증</div>
-</div>
-<div class="vt-sec-title">필수 추천 TOP4 (고정)</div>
-<div class="vendor-grid" data-vt-grid="fixed"></div>
-<div class="vt-sec-title">오늘의 추천 TOP2 (자동 로테이션)</div>
-<div class="vendor-grid" data-vt-grid="rot"></div>
-<div class="vt-actions">
-<a data-cta="vendor_teaser_all" data-utm="1" href="/cert/">전체 혜택/공지 보기</a>
-<a class="primary" data-cta="vendor_teaser_to_analysis" data-utm="1" href="/analysis/">분석기 바로가기</a>
-</div>
-</div>
+<script data-src="../../assets/config/toolconfig/c.4f53f5a25f.json" id="__88stToolConfig" type="application/json"></script>
+
 <div class="card" style="margin-top:12px;">
 <h2 style="margin:0 0 10px;font-size:16px;">자주 묻는 질문(FAQ)</h2>
 <div class="faq">
